<resources>
    <string name="app_name">LARISA</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Homepage">Home</string>
    <string name="ScanAct">Scan</string>
    <string name="SecureCheck">Check your phone security now</string>
    <string name="listapp">List App</string>
    <string name="piechart">Pie Chart</string>
    <string name="policy_title">Privacy, deception and device abuse</string>
    <string name="POLICY">POLICIES</string>
    <string name="None">None</string>
    <string name="lock_icon">lock icon</string>
    <string name="policy">Policies</string>


    <string name="oath">We’re committed to protecting user privacy and providing a safe
        and secure environment for our users. Apps that are deceptive, malicious, or intended
        to abuse or misuse any network, device or personal data are strictly prohibited.</string>

    <string name="privacy">PRIVACY POLICY</string>
    <string name="priv_policy">This Privacy Policy applies to LARISA\'s apps, websites, and related services,
        which we collectively refer to as the Services. We may periodically update this Privacy Policy by posting
        a new version on <a href="www.Larisa.tech">www.Larisa.tech </a> . If we make any material changes, we will notify you as required by applicable law,
        including by posting a notice on the Service before the change takes effect. Your continued use of the Services after
        the effective date will be subject to the new Privacy Policy.
    </string>
    <string name="contact_us">CONTACT US</string>
    <string name="contactUs">If you have questions about data protection, or if you have any requests for resolving
        issues with your personal data, we encourage you to primarily contact us through the support contact Larisa\'s
        website, so we can reply to you more quickly. Alternatively, you may contact:\n\n
        Email: larisa.baopq@gmail.com</string>

    <string name="report">LARISA</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="error_loading_file">Error loading file</string>
    <string name="select_a_file">Select a File</string>
    <string name="is">\u0020is\u0020</string>
    <string name="scan_now">SCAN</string>
    <string name="emptystring">BERICHT</string>
    <string name="permission_list">Permissions List</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="share">Report a bug</string>
    <string name="sponsor">Report a bug</string>
    <string name="scan_apk">Scan APK</string>
    <string name="custom_scan">Scan APK</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="iconDescription">Icon</string>
    <string name="logo">Logo</string>
    <string name="sha256_hash" translatable="false">SHA256 Hash</string>
    <string name="stop">STOP</string>
    <string name="uninstall">Uninstall</string>
    <string name="percent_start">0%</string>
    <string name="sample_text" translatable="false">Sample</string>
    <string name="appIcon">App icon</string>
    <string name="permission_info">Permission Info</string>
    <string name="no_description_found">No description found</string>
    <string name="scanningApplications">Scanning Applications</string>
    <string name="scanning">SCANNING</string>
    <string name="unknown">Unknown</string>
    <string name="scan_system_apps_toast">System apps will be included while scanning</string>
    <string name="dark_mode_enabled_toast">Dark Mode is Enabled</string>
    <string name="dark_mode_disabled_toast">Dark Mode is Disabled</string>
    <string name="permission_denied_message">Permission is required for getting list of files</string>
    <string name="malware">Malware</string>
    <string name="safe">Safe</string>
    <string name="real_time_scan_on">Real Time Scan is On</string>
    <string name="risky">Risky</string>
    <string name="system_app">System App</string>
    <string name="uninstall_successful">Uninstall Successful!</string>
    <string name="app_details">APP DETAILS</string>
    <string name="no_permissions_required">No permissions required!</string>
    <string name="prediction_score">Prediction Score :</string>
    <string name="last_scan">Last Scan:</string>
    <string name="never">Never</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>