<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ LibreAV - Anti-malware for Android using machine learning
  ~ Copyright (C) 2020 Project Matris
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/larisa_darkbackgr">

    <LinearLayout
        android:id="@+id/scanningView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/larisa_109"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/progressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/percentText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/percent_start"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:scaleY="6" />
        </LinearLayout>

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:text="@string/scanningApplications"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/secondaryStatusText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7dp"
            android:ellipsize="end"
            android:text=""
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="186dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:backgroundTint="#F2FFFFFF"
        android:text="@string/stop"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:backgroundTintMode="add"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="2dp" />
</RelativeLayout>